RAIWEB | Logo primary Title Right aligned | issue fixed

--- a/web/styles/includes/navigation.less
+++ b/web/styles/includes/navigation.less
@@ -169,6 +169,7 @@
 		font-family: @font-cinzel-decorative-black;
 		font-size: @brand-logo-primary-title-size;
 	    color: @brand-logo-primary-title-color;
+	    text-align: right;
 
 		.high-char {
 			padding: 3px;
